# dakera-rs

./: .claudeignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: settings.json
.claude-flow/neural/: lora-checkpoint-1778644010590.json  patterns.json  stats.json
.claude/rules/: rust-conventions.md
.claude/skills/sdk-release/: SKILL.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  license-integrity.yml  release.yml
examples/: admin_operations.rs  advanced.rs  analytics.rs  basic.rs  fulltext_search.rs  knowledge_graph.rs  memory.rs  ops_diagnostics.rs  vector_operations.rs
examples/playground/: chat_comparison.rs  main.rs
src/: admin.rs  agents.rs  analytics.rs  client.rs  error.rs  events.rs  filter.rs  grpc_client.rs  grpc_proto.rs  keys.rs  knowledge.rs  lib.rs  memory.rs  session.rs  types.rs
tests/: admin_ops_test.rs  analytics_kg_test.rs  autopilot_decay_test.rs  hybrid_search_test.rs  integration_test.rs  memory_session_test.rs  ops_metrics_test.rs  playground_integration_test.rs  rotate_encryption_key_test.rs  sse_events_test.rs  text_embedding_test.rs
